other-mpol/inject-sealed-secret-config/.chainsaw-test/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sealed-secret-config
  namespace: default
data:
  secret_resource: "kbs://default/my-secret"
  target_path: "/etc/secrets/my-secret"
